--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Billi Ramirez <billyramirezalex@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop"
+    "develop": "gatsby develop",
+    "build": "gatsby build",
+    "start": "npm run develop"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
