--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "start": "npm run develop"
+    "start": "yarn run develop"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
